--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <!-- <title>Para CMS</title> -->
-    <base href="/">
+    <base href="/" />
+    <title>Para-Dev CMS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- bootstrap css -->
